[tool.poetry]
name = "10-2-12-pytest"
version = "0.1.0"
description = ""
authors = ["Artem Volkov <tirydarten@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
